syntax = "proto3";

service ClientService {
  rpc Deposit (DepositReq) returns (DepositResp);
  rpc Withdraw (WithdrawReq) returns (WithdrawResp);
  rpc ReadBalance (ReadReq) returns (ReadResp);
  rpc AckDeposit (DepositResp) returns (AckResp);
  rpc AckWithdraw (WithdrawResp) returns (AckResp);
  rpc AckReadBalance (ReadResp) returns (AckResp);
}

message AckResp {

}

/*  Deposit */
message DepositReq {
	Client client = 1;
	double amount = 2;
	string sender = 3;
	
}

message DepositResp {
	string response = 1;
	
}

/*  Withdraw */

message WithdrawReq {
	Client client = 1;
	double amount = 2;
	string sender = 3;
	
}

message WithdrawResp {
	string response = 1;
	
}

/*  Read */

message ReadReq {
	Client client = 1;
	string sender = 2;
	
	
}

message ReadResp {
	double balance = 1;
	
}



message Client {
	int32 clientID = 1;
	uint32 clientRequestSeqNumb = 2;
}